<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_input_new_password" />

    <EditText
        android:id="@+id/settings_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_input_new_password_confirm" />

    <EditText
        android:id="@+id/settings_input_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/settings_mfa_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/settings_input_verification_code" />

    <EditText
        android:id="@+id/settings_input_mfa_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="number" />

    <Button
        android:id="@+id/settings_button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/settings_button_update"
        app:cornerRadius="16dp" />

</LinearLayout>

