<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout_cart"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/last_update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$$"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/cart_listing"
        android:layout_width="410dp"
        android:layout_height="494dp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/checkout_confirm" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/checkout_clear" />
    </LinearLayout>

</LinearLayout>